UPDATE: Too much word done and was a while ago so forgot what I did, so now I'm mass commiting

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/nav.css": "/css/nav.css",
+    "/js/races-map.js": "/js/races-map.js",
     "/js/live-race-search.js": "/js/live-race-search.js"
 }
