--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: php
 php:
-  - '7.1'
+- '7.1'
 before_script:
-  - composer self-update
-  - composer install --no-interaction
-  - cp .env.travis .env
-  - php artisan key:generate
-
+- composer self-update
+- composer install --no-interaction
+- cp .env.travis .env
+- php artisan key:generate
 script:
-  - vendor/bin/phpunit
+- vendor/bin/phpunit
+before_install:
+- openssl aes-256-cbc -K $encrypted_1c3486330cec_key -iv $encrypted_1c3486330cec_iv
+  -in travis_rsa.enc -out travis_rsa -d
