added deploy script

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,6 @@ before_install:
   -in travis_rsa.enc -out travis_rsa -d
 - chmod 600 travis_rsa
 - mv travis_rsa ~/.ssh/id_rsa
+
+after_success:
+- bash ./deploy.sh
