--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_script:
 - composer install --no-interaction
 - cp .env.travis .env
 - php artisan key:generate
+- echo -e "Host danjscott.co.uk\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
 script:
 - vendor/bin/phpunit
 before_install:
