react test branch commit

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -4,5 +4,21 @@
     "/css/profile.css": "/css/profile.css",
     "/css/nav.css": "/css/nav.css",
     "/js/races-map.js": "/js/races-map.js",
-    "/js/ajax.js": "/js/ajax.js"
+    "/js/ajax.js": "/js/ajax.js",
+    "/0.6b2ec609ee15322a4654.hot-update.js": "/0.6b2ec609ee15322a4654.hot-update.js",
+    "/0.516047664f56f768711f.hot-update.js": "/0.516047664f56f768711f.hot-update.js",
+    "/0.69f215b670a9406c0dac.hot-update.js": "/0.69f215b670a9406c0dac.hot-update.js",
+    "/0.68153c0bcdfb22d6874e.hot-update.js": "/0.68153c0bcdfb22d6874e.hot-update.js",
+    "/0.951eb7d0e9dc219acfda.hot-update.js": "/0.951eb7d0e9dc219acfda.hot-update.js",
+    "/0.1466547ebbb2933b3fe5.hot-update.js": "/0.1466547ebbb2933b3fe5.hot-update.js",
+    "/0.6c2d7116c6877be025db.hot-update.js": "/0.6c2d7116c6877be025db.hot-update.js",
+    "/0.d994ee6ddd1918817ed2.hot-update.js": "/0.d994ee6ddd1918817ed2.hot-update.js",
+    "/0.e36dae0e3ebab7291752.hot-update.js": "/0.e36dae0e3ebab7291752.hot-update.js",
+    "/0.c1bae2228d64e9769c64.hot-update.js": "/0.c1bae2228d64e9769c64.hot-update.js",
+    "/0.6f7fbfa6e5e97901f06a.hot-update.js": "/0.6f7fbfa6e5e97901f06a.hot-update.js",
+    "/0.84526df2e5f98facbd8d.hot-update.js": "/0.84526df2e5f98facbd8d.hot-update.js",
+    "/0.ae663ab5326fed9a7d16.hot-update.js": "/0.ae663ab5326fed9a7d16.hot-update.js",
+    "/0.5555c01dea0dd45ea4ea.hot-update.js": "/0.5555c01dea0dd45ea4ea.hot-update.js",
+    "/0.667e48c2efd268cbfe5b.hot-update.js": "/0.667e48c2efd268cbfe5b.hot-update.js",
+    "/0.2a75efd7dfc82e477075.hot-update.js": "/0.2a75efd7dfc82e477075.hot-update.js"
 }
