--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     },
     "devDependencies": {
         "axios": "^0.16.2",
+        "babel-preset-react": "^6.24.1",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.0.1",
         "jquery": "^3.1.1",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
+        "react": "^16.4.1",
+        "react-dom": "^16.4.1",
         "vue": "^2.1.10"
     }
 }
