--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
     "require": {
         "php": ">=7.0.0",
         "darryldecode/cart": "~3.0",
-        "doctrine/dbal": "^2.6",
+        "doctrine/dbal": "^2.8",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "tymon/jwt-auth": "0.5.*"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
