--- a/package.json
+++ b/package.json
@@ -16,6 +16,13 @@
         "jquery": "^3.1.1",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.1.10"
+        "vue": "^2.5.16",
+        "vue-template-compiler": "^2.5.16"
+    },
+    "dependencies": {
+        "element-ui": "^2.4.6",
+        "laravel-vue-pagination": "^1.2.0",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     }
 }
