--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -326,5 +326,21 @@
     "/0.27e6a6378bf48b79eeaa.hot-update.js": "/0.27e6a6378bf48b79eeaa.hot-update.js",
     "/0.2227fc03f52c88f6edcc.hot-update.js": "/0.2227fc03f52c88f6edcc.hot-update.js",
     "/0.062593a63c1b50258a4e.hot-update.js": "/0.062593a63c1b50258a4e.hot-update.js",
-    "/0.1de71d2ff1bcd3ca4b81.hot-update.js": "/0.1de71d2ff1bcd3ca4b81.hot-update.js"
+    "/0.1de71d2ff1bcd3ca4b81.hot-update.js": "/0.1de71d2ff1bcd3ca4b81.hot-update.js",
+    "/0.6733641760149910c9de.hot-update.js": "/0.6733641760149910c9de.hot-update.js",
+    "/0.7953d8038ef66399a3a3.hot-update.js": "/0.7953d8038ef66399a3a3.hot-update.js",
+    "/0.26df0dff42ca7c607d1d.hot-update.js": "/0.26df0dff42ca7c607d1d.hot-update.js",
+    "/0.43927942f6abfca88ccb.hot-update.js": "/0.43927942f6abfca88ccb.hot-update.js",
+    "/0.80a6f222f3cff7ffcc4a.hot-update.js": "/0.80a6f222f3cff7ffcc4a.hot-update.js",
+    "/0.387eba8a0ed1d7b506e3.hot-update.js": "/0.387eba8a0ed1d7b506e3.hot-update.js",
+    "/0.0fb4fa8627a4f45c2fca.hot-update.js": "/0.0fb4fa8627a4f45c2fca.hot-update.js",
+    "/0.3da9916e363d303d9e47.hot-update.js": "/0.3da9916e363d303d9e47.hot-update.js",
+    "/0.ff0b3896bc55c425c363.hot-update.js": "/0.ff0b3896bc55c425c363.hot-update.js",
+    "/0.8e5deda8586d5e0f5d7a.hot-update.js": "/0.8e5deda8586d5e0f5d7a.hot-update.js",
+    "/0.bd397a27a8ad1d978791.hot-update.js": "/0.bd397a27a8ad1d978791.hot-update.js",
+    "/0.1dd52c45b7069f79fa3c.hot-update.js": "/0.1dd52c45b7069f79fa3c.hot-update.js",
+    "/0.a182cc5d3332dabc16bc.hot-update.js": "/0.a182cc5d3332dabc16bc.hot-update.js",
+    "/0.52f076a65db4def64c8e.hot-update.js": "/0.52f076a65db4def64c8e.hot-update.js",
+    "/0.b5eacc82a540db348166.hot-update.js": "/0.b5eacc82a540db348166.hot-update.js",
+    "/0.dd4f3baabe0f1d907a05.hot-update.js": "/0.dd4f3baabe0f1d907a05.hot-update.js"
 }
