reg error message styles

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -342,5 +342,45 @@
     "/0.a182cc5d3332dabc16bc.hot-update.js": "/0.a182cc5d3332dabc16bc.hot-update.js",
     "/0.52f076a65db4def64c8e.hot-update.js": "/0.52f076a65db4def64c8e.hot-update.js",
     "/0.b5eacc82a540db348166.hot-update.js": "/0.b5eacc82a540db348166.hot-update.js",
-    "/0.dd4f3baabe0f1d907a05.hot-update.js": "/0.dd4f3baabe0f1d907a05.hot-update.js"
+    "/0.dd4f3baabe0f1d907a05.hot-update.js": "/0.dd4f3baabe0f1d907a05.hot-update.js",
+    "/0.75ee76c54306e6661669.hot-update.js": "/0.75ee76c54306e6661669.hot-update.js",
+    "/0.98af45234a1fc659e262.hot-update.js": "/0.98af45234a1fc659e262.hot-update.js",
+    "/0.e4af6a8493abf94108ba.hot-update.js": "/0.e4af6a8493abf94108ba.hot-update.js",
+    "/0.8104aad7b0eddf52a6aa.hot-update.js": "/0.8104aad7b0eddf52a6aa.hot-update.js",
+    "/0.cc9a6d1c87ab67425832.hot-update.js": "/0.cc9a6d1c87ab67425832.hot-update.js",
+    "/0.b5d577248e790688cc46.hot-update.js": "/0.b5d577248e790688cc46.hot-update.js",
+    "/0.711fc47f8819ed99a07c.hot-update.js": "/0.711fc47f8819ed99a07c.hot-update.js",
+    "/0.e6709543ec34660746c2.hot-update.js": "/0.e6709543ec34660746c2.hot-update.js",
+    "/0.a2ecdbdbc0eb72e8b96a.hot-update.js": "/0.a2ecdbdbc0eb72e8b96a.hot-update.js",
+    "/0.e555d1644d4ea5d4d14d.hot-update.js": "/0.e555d1644d4ea5d4d14d.hot-update.js",
+    "/0.9b4052c31c1b458aba21.hot-update.js": "/0.9b4052c31c1b458aba21.hot-update.js",
+    "/0.2bfd572b48f617dd4edf.hot-update.js": "/0.2bfd572b48f617dd4edf.hot-update.js",
+    "/0.c3d71e757ba2b5a16385.hot-update.js": "/0.c3d71e757ba2b5a16385.hot-update.js",
+    "/0.d8a4cb51a6cc4df3fdff.hot-update.js": "/0.d8a4cb51a6cc4df3fdff.hot-update.js",
+    "/0.1e78f9ba4fbfa50888bb.hot-update.js": "/0.1e78f9ba4fbfa50888bb.hot-update.js",
+    "/0.a4e304f0ed974d6cc7bc.hot-update.js": "/0.a4e304f0ed974d6cc7bc.hot-update.js",
+    "/0.084968f56a6b6c08f498.hot-update.js": "/0.084968f56a6b6c08f498.hot-update.js",
+    "/0.da5d30d722d019c8c58f.hot-update.js": "/0.da5d30d722d019c8c58f.hot-update.js",
+    "/0.0d1fee196ba821b44d12.hot-update.js": "/0.0d1fee196ba821b44d12.hot-update.js",
+    "/0.4839481a28d6506b8e5e.hot-update.js": "/0.4839481a28d6506b8e5e.hot-update.js",
+    "/0.9ecf14938056d6d99aaf.hot-update.js": "/0.9ecf14938056d6d99aaf.hot-update.js",
+    "/0.0a3b8ddb802bbd984864.hot-update.js": "/0.0a3b8ddb802bbd984864.hot-update.js",
+    "/0.9b2857e7f365ae423d74.hot-update.js": "/0.9b2857e7f365ae423d74.hot-update.js",
+    "/0.f64b986e8df6915885fd.hot-update.js": "/0.f64b986e8df6915885fd.hot-update.js",
+    "/0.0af0383012806a5919e7.hot-update.js": "/0.0af0383012806a5919e7.hot-update.js",
+    "/0.4eb1d56eb0b3682d8420.hot-update.js": "/0.4eb1d56eb0b3682d8420.hot-update.js",
+    "/0.59b18aaf5f1a823799e2.hot-update.js": "/0.59b18aaf5f1a823799e2.hot-update.js",
+    "/0.b49a2282988f74ed8acc.hot-update.js": "/0.b49a2282988f74ed8acc.hot-update.js",
+    "/0.fc53b578b4010cb7e5cc.hot-update.js": "/0.fc53b578b4010cb7e5cc.hot-update.js",
+    "/0.0d19bb702b3f011479e1.hot-update.js": "/0.0d19bb702b3f011479e1.hot-update.js",
+    "/0.62d74d5db49a5870467f.hot-update.js": "/0.62d74d5db49a5870467f.hot-update.js",
+    "/0.c3827b8a2e7ffd77100c.hot-update.js": "/0.c3827b8a2e7ffd77100c.hot-update.js",
+    "/0.39ae5402b39148497adf.hot-update.js": "/0.39ae5402b39148497adf.hot-update.js",
+    "/0.927b556226458592a720.hot-update.js": "/0.927b556226458592a720.hot-update.js",
+    "/0.9ec4ee0063d5267baea9.hot-update.js": "/0.9ec4ee0063d5267baea9.hot-update.js",
+    "/0.c8b1c1ebea8217e012ad.hot-update.js": "/0.c8b1c1ebea8217e012ad.hot-update.js",
+    "/0.d01984327157e83db360.hot-update.js": "/0.d01984327157e83db360.hot-update.js",
+    "/0.3ed9fbba397477b8a8d3.hot-update.js": "/0.3ed9fbba397477b8a8d3.hot-update.js",
+    "/0.62fc9cf5fb9a0b57cb98.hot-update.js": "/0.62fc9cf5fb9a0b57cb98.hot-update.js",
+    "/0.dbc5f498160394115acf.hot-update.js": "/0.dbc5f498160394115acf.hot-update.js"
 }
