Created upcoming races component

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -382,5 +382,153 @@
     "/0.d01984327157e83db360.hot-update.js": "/0.d01984327157e83db360.hot-update.js",
     "/0.3ed9fbba397477b8a8d3.hot-update.js": "/0.3ed9fbba397477b8a8d3.hot-update.js",
     "/0.62fc9cf5fb9a0b57cb98.hot-update.js": "/0.62fc9cf5fb9a0b57cb98.hot-update.js",
-    "/0.dbc5f498160394115acf.hot-update.js": "/0.dbc5f498160394115acf.hot-update.js"
+    "/0.dbc5f498160394115acf.hot-update.js": "/0.dbc5f498160394115acf.hot-update.js",
+    "/0.204932b8da3e1a5dc5a8.hot-update.js": "/0.204932b8da3e1a5dc5a8.hot-update.js",
+    "/0.143940d67ad7319efa41.hot-update.js": "/0.143940d67ad7319efa41.hot-update.js",
+    "/0.df9b9dd941a630f505f6.hot-update.js": "/0.df9b9dd941a630f505f6.hot-update.js",
+    "/0.079096f9e5b910021d13.hot-update.js": "/0.079096f9e5b910021d13.hot-update.js",
+    "/0.8c2ef1cd2d07cb914c33.hot-update.js": "/0.8c2ef1cd2d07cb914c33.hot-update.js",
+    "/0.de70634ae07b361386e1.hot-update.js": "/0.de70634ae07b361386e1.hot-update.js",
+    "/0.bdc902ce1f46183b6045.hot-update.js": "/0.bdc902ce1f46183b6045.hot-update.js",
+    "/0.3c745718bc2e8ca11896.hot-update.js": "/0.3c745718bc2e8ca11896.hot-update.js",
+    "/0.9d71d2abccc4c1387aa3.hot-update.js": "/0.9d71d2abccc4c1387aa3.hot-update.js",
+    "/0.97dc0d772b5bdb63e14a.hot-update.js": "/0.97dc0d772b5bdb63e14a.hot-update.js",
+    "/0.908fe5bf65e1a6597d28.hot-update.js": "/0.908fe5bf65e1a6597d28.hot-update.js",
+    "/0.b8619286e47122c7b5c3.hot-update.js": "/0.b8619286e47122c7b5c3.hot-update.js",
+    "/0.f235e4c95604ad5407e3.hot-update.js": "/0.f235e4c95604ad5407e3.hot-update.js",
+    "/0.b172f02bfb84c846cedc.hot-update.js": "/0.b172f02bfb84c846cedc.hot-update.js",
+    "/0.de68db550f4ffdd3de7e.hot-update.js": "/0.de68db550f4ffdd3de7e.hot-update.js",
+    "/0.56ba62c291880bf4e424.hot-update.js": "/0.56ba62c291880bf4e424.hot-update.js",
+    "/0.8ab3a4c4adc73cd71f9c.hot-update.js": "/0.8ab3a4c4adc73cd71f9c.hot-update.js",
+    "/0.79c02b7ceaada808f214.hot-update.js": "/0.79c02b7ceaada808f214.hot-update.js",
+    "/0.18459b0a4e3f98130048.hot-update.js": "/0.18459b0a4e3f98130048.hot-update.js",
+    "/0.7dacc31499b358b8513c.hot-update.js": "/0.7dacc31499b358b8513c.hot-update.js",
+    "/0.d0e8e26d52dae718f272.hot-update.js": "/0.d0e8e26d52dae718f272.hot-update.js",
+    "/0.4c4820c286b0017addf1.hot-update.js": "/0.4c4820c286b0017addf1.hot-update.js",
+    "/0.4379487c0a644810feb3.hot-update.js": "/0.4379487c0a644810feb3.hot-update.js",
+    "/0.4d3336000415b34c0a13.hot-update.js": "/0.4d3336000415b34c0a13.hot-update.js",
+    "/0.eeb75d7c5cc1817f3012.hot-update.js": "/0.eeb75d7c5cc1817f3012.hot-update.js",
+    "/0.bc517e19a8661b817e99.hot-update.js": "/0.bc517e19a8661b817e99.hot-update.js",
+    "/0.fb8a28b5993666fd637d.hot-update.js": "/0.fb8a28b5993666fd637d.hot-update.js",
+    "/0.3f1e4b5f241154b95b3d.hot-update.js": "/0.3f1e4b5f241154b95b3d.hot-update.js",
+    "/0.1b88c80c1082a95d74ad.hot-update.js": "/0.1b88c80c1082a95d74ad.hot-update.js",
+    "/0.7a41ff07aac7dffb9d8f.hot-update.js": "/0.7a41ff07aac7dffb9d8f.hot-update.js",
+    "/0.91bc88de0d15a8c6eac5.hot-update.js": "/0.91bc88de0d15a8c6eac5.hot-update.js",
+    "/0.9cf3b31008df74e061f3.hot-update.js": "/0.9cf3b31008df74e061f3.hot-update.js",
+    "/0.727af664f6f653e590f4.hot-update.js": "/0.727af664f6f653e590f4.hot-update.js",
+    "/0.2ac59ac7ade286dbc9d5.hot-update.js": "/0.2ac59ac7ade286dbc9d5.hot-update.js",
+    "/0.18cebf86d4b0488a9276.hot-update.js": "/0.18cebf86d4b0488a9276.hot-update.js",
+    "/0.9d5316b3437764a523c7.hot-update.js": "/0.9d5316b3437764a523c7.hot-update.js",
+    "/0.8f34b69d65b1c06dcab1.hot-update.js": "/0.8f34b69d65b1c06dcab1.hot-update.js",
+    "/0.9ae70910b1d57b26194d.hot-update.js": "/0.9ae70910b1d57b26194d.hot-update.js",
+    "/0.035bf2c14159ae428f73.hot-update.js": "/0.035bf2c14159ae428f73.hot-update.js",
+    "/0.c586b4d4b4917ba2d3c0.hot-update.js": "/0.c586b4d4b4917ba2d3c0.hot-update.js",
+    "/0.d52b42e5070fc7778a30.hot-update.js": "/0.d52b42e5070fc7778a30.hot-update.js",
+    "/0.6e435b89a39b33a60e35.hot-update.js": "/0.6e435b89a39b33a60e35.hot-update.js",
+    "/0.96d26e272142e81c39e6.hot-update.js": "/0.96d26e272142e81c39e6.hot-update.js",
+    "/0.f522b88c57ec5235f094.hot-update.js": "/0.f522b88c57ec5235f094.hot-update.js",
+    "/0.3e4a070c769e2cf1ef0f.hot-update.js": "/0.3e4a070c769e2cf1ef0f.hot-update.js",
+    "/0.416665d7b85fac790a25.hot-update.js": "/0.416665d7b85fac790a25.hot-update.js",
+    "/0.b207e959a6b5a1a75497.hot-update.js": "/0.b207e959a6b5a1a75497.hot-update.js",
+    "/0.e815dca558040c1b103d.hot-update.js": "/0.e815dca558040c1b103d.hot-update.js",
+    "/0.523cc2cb9b008bd258db.hot-update.js": "/0.523cc2cb9b008bd258db.hot-update.js",
+    "/0.8183e5fea6a361c28dc5.hot-update.js": "/0.8183e5fea6a361c28dc5.hot-update.js",
+    "/0.46c9ae0189ed9ac45b65.hot-update.js": "/0.46c9ae0189ed9ac45b65.hot-update.js",
+    "/0.78038a2ca9b91c266fe3.hot-update.js": "/0.78038a2ca9b91c266fe3.hot-update.js",
+    "/0.8289d4581d407ce4d51c.hot-update.js": "/0.8289d4581d407ce4d51c.hot-update.js",
+    "/0.707c482cb75c6e5137c6.hot-update.js": "/0.707c482cb75c6e5137c6.hot-update.js",
+    "/0.356534d239efaf8a3752.hot-update.js": "/0.356534d239efaf8a3752.hot-update.js",
+    "/0.c408dc217e6b40c9500f.hot-update.js": "/0.c408dc217e6b40c9500f.hot-update.js",
+    "/0.ddf2029ad3296af11cf8.hot-update.js": "/0.ddf2029ad3296af11cf8.hot-update.js",
+    "/0.665ccfc01394be9d6120.hot-update.js": "/0.665ccfc01394be9d6120.hot-update.js",
+    "/0.ae38c95cf6d8673ecce4.hot-update.js": "/0.ae38c95cf6d8673ecce4.hot-update.js",
+    "/0.61e05197df346b3cf879.hot-update.js": "/0.61e05197df346b3cf879.hot-update.js",
+    "/0.33584d37add0a76d837b.hot-update.js": "/0.33584d37add0a76d837b.hot-update.js",
+    "/0.9a39ea4cb4bf143083bd.hot-update.js": "/0.9a39ea4cb4bf143083bd.hot-update.js",
+    "/0.b047c9b0edb027ce5e06.hot-update.js": "/0.b047c9b0edb027ce5e06.hot-update.js",
+    "/0.16c0edbe6f878dcf7749.hot-update.js": "/0.16c0edbe6f878dcf7749.hot-update.js",
+    "/0.9817a1e841f6dcaec7ef.hot-update.js": "/0.9817a1e841f6dcaec7ef.hot-update.js",
+    "/0.0efba425926cc251dba6.hot-update.js": "/0.0efba425926cc251dba6.hot-update.js",
+    "/0.b239fc9cfaf61d4477ca.hot-update.js": "/0.b239fc9cfaf61d4477ca.hot-update.js",
+    "/0.1cc3e6e49e299aff9d3c.hot-update.js": "/0.1cc3e6e49e299aff9d3c.hot-update.js",
+    "/0.8ca35e21ed16ba595a13.hot-update.js": "/0.8ca35e21ed16ba595a13.hot-update.js",
+    "/0.763d4a111bca3d6a975a.hot-update.js": "/0.763d4a111bca3d6a975a.hot-update.js",
+    "/0.22a716fd9cedcfa5fea2.hot-update.js": "/0.22a716fd9cedcfa5fea2.hot-update.js",
+    "/0.65790073947b218bc43e.hot-update.js": "/0.65790073947b218bc43e.hot-update.js",
+    "/0.3d9a88e26f989605c3d0.hot-update.js": "/0.3d9a88e26f989605c3d0.hot-update.js",
+    "/0.6bef2d60c29d064c03ad.hot-update.js": "/0.6bef2d60c29d064c03ad.hot-update.js",
+    "/0.a45ad2a8f766ccc2b383.hot-update.js": "/0.a45ad2a8f766ccc2b383.hot-update.js",
+    "/0.ffef96a065274a06feea.hot-update.js": "/0.ffef96a065274a06feea.hot-update.js",
+    "/0.9eb7bad45763df9922e1.hot-update.js": "/0.9eb7bad45763df9922e1.hot-update.js",
+    "/0.d3e2f44a7a3c84cb0f04.hot-update.js": "/0.d3e2f44a7a3c84cb0f04.hot-update.js",
+    "/0.c8868bc67e603c6dd3b4.hot-update.js": "/0.c8868bc67e603c6dd3b4.hot-update.js",
+    "/0.056ee9ab6be897c93390.hot-update.js": "/0.056ee9ab6be897c93390.hot-update.js",
+    "/0.6b847d60a4c289abed57.hot-update.js": "/0.6b847d60a4c289abed57.hot-update.js",
+    "/0.e3ff132924482a366cef.hot-update.js": "/0.e3ff132924482a366cef.hot-update.js",
+    "/0.3e44bc53c3ecf3936d83.hot-update.js": "/0.3e44bc53c3ecf3936d83.hot-update.js",
+    "/0.f0e0ec49bb176c851725.hot-update.js": "/0.f0e0ec49bb176c851725.hot-update.js",
+    "/0.358fa6fafab6c3e4025d.hot-update.js": "/0.358fa6fafab6c3e4025d.hot-update.js",
+    "/0.21c5e8a877786eded6de.hot-update.js": "/0.21c5e8a877786eded6de.hot-update.js",
+    "/0.bb0ffe0cd84380d61be5.hot-update.js": "/0.bb0ffe0cd84380d61be5.hot-update.js",
+    "/0.4b83614ecb6c474e36aa.hot-update.js": "/0.4b83614ecb6c474e36aa.hot-update.js",
+    "/0.bebd1abf1e2c74108d88.hot-update.js": "/0.bebd1abf1e2c74108d88.hot-update.js",
+    "/0.bd2e4cc77621cde7addd.hot-update.js": "/0.bd2e4cc77621cde7addd.hot-update.js",
+    "/0.6760ffa1384c038674a8.hot-update.js": "/0.6760ffa1384c038674a8.hot-update.js",
+    "/0.2db2b5f83275f6822d49.hot-update.js": "/0.2db2b5f83275f6822d49.hot-update.js",
+    "/0.5ac3873737eac761a0fd.hot-update.js": "/0.5ac3873737eac761a0fd.hot-update.js",
+    "/0.ac4df65bb5c34812ad81.hot-update.js": "/0.ac4df65bb5c34812ad81.hot-update.js",
+    "/0.a0de3abe32f4375e520f.hot-update.js": "/0.a0de3abe32f4375e520f.hot-update.js",
+    "/0.a6e70bcea770d00404f7.hot-update.js": "/0.a6e70bcea770d00404f7.hot-update.js",
+    "/0.8d2287dd6724746ad825.hot-update.js": "/0.8d2287dd6724746ad825.hot-update.js",
+    "/0.4ac89ceea1cb6ab52d23.hot-update.js": "/0.4ac89ceea1cb6ab52d23.hot-update.js",
+    "/0.47d4778f4842e42f6b1e.hot-update.js": "/0.47d4778f4842e42f6b1e.hot-update.js",
+    "/0.abec8348182dacfccf45.hot-update.js": "/0.abec8348182dacfccf45.hot-update.js",
+    "/0.1e707e1b4015854c0d60.hot-update.js": "/0.1e707e1b4015854c0d60.hot-update.js",
+    "/0.79c16b55ef0742f4d1c1.hot-update.js": "/0.79c16b55ef0742f4d1c1.hot-update.js",
+    "/0.3b330086a759c0a8c878.hot-update.js": "/0.3b330086a759c0a8c878.hot-update.js",
+    "/0.03f9b0b288fee26a8eb5.hot-update.js": "/0.03f9b0b288fee26a8eb5.hot-update.js",
+    "/0.47a7c4469778c75bbb7f.hot-update.js": "/0.47a7c4469778c75bbb7f.hot-update.js",
+    "/0.38e7ea3aa5136106e21e.hot-update.js": "/0.38e7ea3aa5136106e21e.hot-update.js",
+    "/0.ae7b7d851f8c18e8d3ae.hot-update.js": "/0.ae7b7d851f8c18e8d3ae.hot-update.js",
+    "/0.8a763c97f3b32d3fade7.hot-update.js": "/0.8a763c97f3b32d3fade7.hot-update.js",
+    "/0.01d4282242fe3220c1cb.hot-update.js": "/0.01d4282242fe3220c1cb.hot-update.js",
+    "/0.18a77eca0eabc8e5d4cc.hot-update.js": "/0.18a77eca0eabc8e5d4cc.hot-update.js",
+    "/0.a9f4bdd37064989df649.hot-update.js": "/0.a9f4bdd37064989df649.hot-update.js",
+    "/0.39addccdd1af7ab4785b.hot-update.js": "/0.39addccdd1af7ab4785b.hot-update.js",
+    "/0.5de66a077fea03a4bcae.hot-update.js": "/0.5de66a077fea03a4bcae.hot-update.js",
+    "/0.0bd46872a9186b60bb35.hot-update.js": "/0.0bd46872a9186b60bb35.hot-update.js",
+    "/0.8675df9fa60cf956b5b9.hot-update.js": "/0.8675df9fa60cf956b5b9.hot-update.js",
+    "/0.a225f6e8bed57d3126a1.hot-update.js": "/0.a225f6e8bed57d3126a1.hot-update.js",
+    "/0.4336a9df1beefbc0291c.hot-update.js": "/0.4336a9df1beefbc0291c.hot-update.js",
+    "/0.b118cdfee2eee8b30fae.hot-update.js": "/0.b118cdfee2eee8b30fae.hot-update.js",
+    "/0.2b466b47dc90c503a637.hot-update.js": "/0.2b466b47dc90c503a637.hot-update.js",
+    "/0.544c3693c147940e724a.hot-update.js": "/0.544c3693c147940e724a.hot-update.js",
+    "/0.756e54e2425563ac26ba.hot-update.js": "/0.756e54e2425563ac26ba.hot-update.js",
+    "/0.1984d3ad8293b3468778.hot-update.js": "/0.1984d3ad8293b3468778.hot-update.js",
+    "/0.113e9eb9b16b0f94a869.hot-update.js": "/0.113e9eb9b16b0f94a869.hot-update.js",
+    "/0.94af79115404c24d6fdf.hot-update.js": "/0.94af79115404c24d6fdf.hot-update.js",
+    "/0.d64f97f78a728c658957.hot-update.js": "/0.d64f97f78a728c658957.hot-update.js",
+    "/0.9558cf1c89d4437abff8.hot-update.js": "/0.9558cf1c89d4437abff8.hot-update.js",
+    "/0.f21e7d0bf279839bd0a5.hot-update.js": "/0.f21e7d0bf279839bd0a5.hot-update.js",
+    "/0.10a80106c9f5ce9b9d60.hot-update.js": "/0.10a80106c9f5ce9b9d60.hot-update.js",
+    "/0.71ac8f99c5cade2e7cec.hot-update.js": "/0.71ac8f99c5cade2e7cec.hot-update.js",
+    "/0.d7d709ee8181e726f9b1.hot-update.js": "/0.d7d709ee8181e726f9b1.hot-update.js",
+    "/0.3032e4f5a31462b73fd9.hot-update.js": "/0.3032e4f5a31462b73fd9.hot-update.js",
+    "/0.733bc81fb1746f45ecbc.hot-update.js": "/0.733bc81fb1746f45ecbc.hot-update.js",
+    "/0.b82ec08c37b2740fc97d.hot-update.js": "/0.b82ec08c37b2740fc97d.hot-update.js",
+    "/0.a14a1514fc0c041d1ea0.hot-update.js": "/0.a14a1514fc0c041d1ea0.hot-update.js",
+    "/0.326833195056a20124c0.hot-update.js": "/0.326833195056a20124c0.hot-update.js",
+    "/0.c94e639e7174acd0d9b2.hot-update.js": "/0.c94e639e7174acd0d9b2.hot-update.js",
+    "/0.75cecc3d488a5cdc127d.hot-update.js": "/0.75cecc3d488a5cdc127d.hot-update.js",
+    "/0.84855ed8beb54aca4325.hot-update.js": "/0.84855ed8beb54aca4325.hot-update.js",
+    "/0.98d8b2cf7c6f4ab3cfd9.hot-update.js": "/0.98d8b2cf7c6f4ab3cfd9.hot-update.js",
+    "/0.251ab22f521c1e1afe1b.hot-update.js": "/0.251ab22f521c1e1afe1b.hot-update.js",
+    "/0.0ed29a2da4a2af308654.hot-update.js": "/0.0ed29a2da4a2af308654.hot-update.js",
+    "/0.49eaad291c43c04350ee.hot-update.js": "/0.49eaad291c43c04350ee.hot-update.js",
+    "/0.2bc8bc65a15fa688ee44.hot-update.js": "/0.2bc8bc65a15fa688ee44.hot-update.js",
+    "/0.a330df95385db0d63ba0.hot-update.js": "/0.a330df95385db0d63ba0.hot-update.js",
+    "/0.eeaff595f87b45e4b131.hot-update.js": "/0.eeaff595f87b45e4b131.hot-update.js",
+    "/0.a8be37b0f37b81dd4fbc.hot-update.js": "/0.a8be37b0f37b81dd4fbc.hot-update.js",
+    "/0.1bf77f78d476ff15423b.hot-update.js": "/0.1bf77f78d476ff15423b.hot-update.js",
+    "/0.368318f41f20d3f5c14b.hot-update.js": "/0.368318f41f20d3f5c14b.hot-update.js"
 }
