--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "element-ui": "^2.4.6",
         "laravel-vue-pagination": "^1.2.0",
+        "moment": "^2.22.2",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1"
     }
