Added google maps and markers showing location of races

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -530,5 +530,92 @@
     "/0.eeaff595f87b45e4b131.hot-update.js": "/0.eeaff595f87b45e4b131.hot-update.js",
     "/0.a8be37b0f37b81dd4fbc.hot-update.js": "/0.a8be37b0f37b81dd4fbc.hot-update.js",
     "/0.1bf77f78d476ff15423b.hot-update.js": "/0.1bf77f78d476ff15423b.hot-update.js",
-    "/0.368318f41f20d3f5c14b.hot-update.js": "/0.368318f41f20d3f5c14b.hot-update.js"
+    "/0.368318f41f20d3f5c14b.hot-update.js": "/0.368318f41f20d3f5c14b.hot-update.js",
+    "/0.c1dfce5c10b403f87a07.hot-update.js": "/0.c1dfce5c10b403f87a07.hot-update.js",
+    "/0.b84b8ac3f04b7a7a9301.hot-update.js": "/0.b84b8ac3f04b7a7a9301.hot-update.js",
+    "/0.39931f865441a7c2cb15.hot-update.js": "/0.39931f865441a7c2cb15.hot-update.js",
+    "/0.4211bcd74df53a503cc1.hot-update.js": "/0.4211bcd74df53a503cc1.hot-update.js",
+    "/0.0194d9de2962845ad223.hot-update.js": "/0.0194d9de2962845ad223.hot-update.js",
+    "/0.3228a08b76c7553384e6.hot-update.js": "/0.3228a08b76c7553384e6.hot-update.js",
+    "/0.597bb22fc873b37caed5.hot-update.js": "/0.597bb22fc873b37caed5.hot-update.js",
+    "/0.130e940743e627928c5e.hot-update.js": "/0.130e940743e627928c5e.hot-update.js",
+    "/0.84e07a4279bdf94b2be2.hot-update.js": "/0.84e07a4279bdf94b2be2.hot-update.js",
+    "/0.4e9ec83bc944639cfca4.hot-update.js": "/0.4e9ec83bc944639cfca4.hot-update.js",
+    "/0.62bfc2213b9f3bdfd49d.hot-update.js": "/0.62bfc2213b9f3bdfd49d.hot-update.js",
+    "/0.940c7acf799321c62219.hot-update.js": "/0.940c7acf799321c62219.hot-update.js",
+    "/0.fbc48e682c42e3a166ca.hot-update.js": "/0.fbc48e682c42e3a166ca.hot-update.js",
+    "/0.80b8f97e5069fd44cad2.hot-update.js": "/0.80b8f97e5069fd44cad2.hot-update.js",
+    "/0.e7708925c7ff8fef0722.hot-update.js": "/0.e7708925c7ff8fef0722.hot-update.js",
+    "/0.87b8523a0c4f8e3af171.hot-update.js": "/0.87b8523a0c4f8e3af171.hot-update.js",
+    "/0.becebb5ec98d1abdc021.hot-update.js": "/0.becebb5ec98d1abdc021.hot-update.js",
+    "/0.3d201db56f6e1c02fee8.hot-update.js": "/0.3d201db56f6e1c02fee8.hot-update.js",
+    "/0.2510dc76cd1d35401ce8.hot-update.js": "/0.2510dc76cd1d35401ce8.hot-update.js",
+    "/0.dd3d2650a1951f7596e6.hot-update.js": "/0.dd3d2650a1951f7596e6.hot-update.js",
+    "/0.073f9f3084cd5f9c84cb.hot-update.js": "/0.073f9f3084cd5f9c84cb.hot-update.js",
+    "/0.c4297c737aaac70698ca.hot-update.js": "/0.c4297c737aaac70698ca.hot-update.js",
+    "/0.203bbd87ee89a9ccb906.hot-update.js": "/0.203bbd87ee89a9ccb906.hot-update.js",
+    "/0.1901600099ec62f92a85.hot-update.js": "/0.1901600099ec62f92a85.hot-update.js",
+    "/0.236a770e830cb84f5da0.hot-update.js": "/0.236a770e830cb84f5da0.hot-update.js",
+    "/0.2fff30cd0d78796a7079.hot-update.js": "/0.2fff30cd0d78796a7079.hot-update.js",
+    "/0.0c2e201a6fd8134773d1.hot-update.js": "/0.0c2e201a6fd8134773d1.hot-update.js",
+    "/0.595ff843977b0d4086c1.hot-update.js": "/0.595ff843977b0d4086c1.hot-update.js",
+    "/0.e4573a3108ec65031224.hot-update.js": "/0.e4573a3108ec65031224.hot-update.js",
+    "/0.bd5347e0385d62883451.hot-update.js": "/0.bd5347e0385d62883451.hot-update.js",
+    "/0.a47cb2023a2beca6d9d0.hot-update.js": "/0.a47cb2023a2beca6d9d0.hot-update.js",
+    "/0.75a376faadc5cda1afca.hot-update.js": "/0.75a376faadc5cda1afca.hot-update.js",
+    "/0.f4930df6b4f2cc3dfd7b.hot-update.js": "/0.f4930df6b4f2cc3dfd7b.hot-update.js",
+    "/0.a6edd235e28eb66de636.hot-update.js": "/0.a6edd235e28eb66de636.hot-update.js",
+    "/0.df59ba301aeb0d0fd1d7.hot-update.js": "/0.df59ba301aeb0d0fd1d7.hot-update.js",
+    "/0.8550534eed18a6bf28c7.hot-update.js": "/0.8550534eed18a6bf28c7.hot-update.js",
+    "/0.8d2b5bbad4102fba899a.hot-update.js": "/0.8d2b5bbad4102fba899a.hot-update.js",
+    "/0.51b354f0d1b984630a39.hot-update.js": "/0.51b354f0d1b984630a39.hot-update.js",
+    "/0.0c272054d12ce3ea4f32.hot-update.js": "/0.0c272054d12ce3ea4f32.hot-update.js",
+    "/0.494ecfa6ea6198d8abe0.hot-update.js": "/0.494ecfa6ea6198d8abe0.hot-update.js",
+    "/0.c47ee34a9bcc0786a050.hot-update.js": "/0.c47ee34a9bcc0786a050.hot-update.js",
+    "/0.83b61b6567fc57501c06.hot-update.js": "/0.83b61b6567fc57501c06.hot-update.js",
+    "/0.de141824a7825ad240b5.hot-update.js": "/0.de141824a7825ad240b5.hot-update.js",
+    "/0.1051a658f6754a841626.hot-update.js": "/0.1051a658f6754a841626.hot-update.js",
+    "/0.1b2cc44e218fab3321e1.hot-update.js": "/0.1b2cc44e218fab3321e1.hot-update.js",
+    "/0.6b060d7a3cc7823383ca.hot-update.js": "/0.6b060d7a3cc7823383ca.hot-update.js",
+    "/0.856f3a986a5cd2efb1d7.hot-update.js": "/0.856f3a986a5cd2efb1d7.hot-update.js",
+    "/0.1f12374632a652c1086e.hot-update.js": "/0.1f12374632a652c1086e.hot-update.js",
+    "/0.88a93b111c6003dca32f.hot-update.js": "/0.88a93b111c6003dca32f.hot-update.js",
+    "/0.a2a62a76d3a1c559976a.hot-update.js": "/0.a2a62a76d3a1c559976a.hot-update.js",
+    "/0.6109af494c3c6658073a.hot-update.js": "/0.6109af494c3c6658073a.hot-update.js",
+    "/0.7e52d5407dad2dc6eba5.hot-update.js": "/0.7e52d5407dad2dc6eba5.hot-update.js",
+    "/0.34a2116975c6ef8f06ab.hot-update.js": "/0.34a2116975c6ef8f06ab.hot-update.js",
+    "/0.7779a61e185800a7c7a2.hot-update.js": "/0.7779a61e185800a7c7a2.hot-update.js",
+    "/0.cb066f70839ba12c54b4.hot-update.js": "/0.cb066f70839ba12c54b4.hot-update.js",
+    "/0.5843d623c1165f6f86db.hot-update.js": "/0.5843d623c1165f6f86db.hot-update.js",
+    "/0.7e102019261754421357.hot-update.js": "/0.7e102019261754421357.hot-update.js",
+    "/0.d254afd595b96c47805f.hot-update.js": "/0.d254afd595b96c47805f.hot-update.js",
+    "/0.68564ef3871b1a169d2f.hot-update.js": "/0.68564ef3871b1a169d2f.hot-update.js",
+    "/0.29f3dd9eafa160e6bf6f.hot-update.js": "/0.29f3dd9eafa160e6bf6f.hot-update.js",
+    "/0.64e616a3b8354534cb6a.hot-update.js": "/0.64e616a3b8354534cb6a.hot-update.js",
+    "/0.f6c221b049e1bc0c230d.hot-update.js": "/0.f6c221b049e1bc0c230d.hot-update.js",
+    "/0.295513d6dd2c4f03c505.hot-update.js": "/0.295513d6dd2c4f03c505.hot-update.js",
+    "/0.4f27625bfdff76356075.hot-update.js": "/0.4f27625bfdff76356075.hot-update.js",
+    "/0.a1df5d93bff75aaa1bd6.hot-update.js": "/0.a1df5d93bff75aaa1bd6.hot-update.js",
+    "/0.b7e00dc069eb5cbf08f3.hot-update.js": "/0.b7e00dc069eb5cbf08f3.hot-update.js",
+    "/0.a79336d939b804a4abd4.hot-update.js": "/0.a79336d939b804a4abd4.hot-update.js",
+    "/0.c156e67d1ba0b6c2b990.hot-update.js": "/0.c156e67d1ba0b6c2b990.hot-update.js",
+    "/0.7455c6a9f52dfe02cf6f.hot-update.js": "/0.7455c6a9f52dfe02cf6f.hot-update.js",
+    "/0.c706ef6224461d51d4c9.hot-update.js": "/0.c706ef6224461d51d4c9.hot-update.js",
+    "/0.6f592ae3a3d803bdf3d4.hot-update.js": "/0.6f592ae3a3d803bdf3d4.hot-update.js",
+    "/0.d367f29e6e8529a97586.hot-update.js": "/0.d367f29e6e8529a97586.hot-update.js",
+    "/0.af11a5c495f2b4e36e03.hot-update.js": "/0.af11a5c495f2b4e36e03.hot-update.js",
+    "/0.1bb4a242544078edd5c7.hot-update.js": "/0.1bb4a242544078edd5c7.hot-update.js",
+    "/0.68ba8aa74596bf0fc44b.hot-update.js": "/0.68ba8aa74596bf0fc44b.hot-update.js",
+    "/0.a1fd8860fe3e9a75a3a7.hot-update.js": "/0.a1fd8860fe3e9a75a3a7.hot-update.js",
+    "/0.7c1fa8252603996201f0.hot-update.js": "/0.7c1fa8252603996201f0.hot-update.js",
+    "/0.f2154450efc940a756a6.hot-update.js": "/0.f2154450efc940a756a6.hot-update.js",
+    "/0.d1af15edc3ddff57088a.hot-update.js": "/0.d1af15edc3ddff57088a.hot-update.js",
+    "/0.7e7e90454ff724c9aa4d.hot-update.js": "/0.7e7e90454ff724c9aa4d.hot-update.js",
+    "/0.e270131599ef24c401c6.hot-update.js": "/0.e270131599ef24c401c6.hot-update.js",
+    "/0.9a1091cf2352a80674c5.hot-update.js": "/0.9a1091cf2352a80674c5.hot-update.js",
+    "/0.50009b4e502a357ad2f1.hot-update.js": "/0.50009b4e502a357ad2f1.hot-update.js",
+    "/0.2ebdb95f20044e0863c4.hot-update.js": "/0.2ebdb95f20044e0863c4.hot-update.js",
+    "/0.dbbe0c3299853902b981.hot-update.js": "/0.dbbe0c3299853902b981.hot-update.js",
+    "/0.fc8e382108cb4f7ee29d.hot-update.js": "/0.fc8e382108cb4f7ee29d.hot-update.js",
+    "/0.2f7c4cdec53a1a52ec29.hot-update.js": "/0.2f7c4cdec53a1a52ec29.hot-update.js"
 }
