--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "element-ui": "^2.4.6",
         "laravel-vue-pagination": "^1.2.0",
         "moment": "^2.22.2",
+        "scriptjs": "^2.5.8",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1"
     }
