--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
         "vue-template-compiler": "^2.5.16"
     },
     "dependencies": {
+        "babel-polyfill": "^6.26.0",
         "element-ui": "^2.4.6",
+        "google-maps": "^3.3.0",
         "laravel-vue-pagination": "^1.2.0",
         "moment": "^2.22.2",
+        "save": "^2.3.2",
         "scriptjs": "^2.5.8",
         "vue-router": "^3.0.1",
+        "vue2-google-maps": "^0.10.2",
         "vuex": "^3.0.1"
     }
 }
